# app-kaspa

./: .gitignore  Dockerfile.builder  Dockerfile.speculos  Makefile  README.md  docker-compose.yaml  ledger_app.toml  run-unit-tests.sh  utils.sh
.clusterfuzzlite/: Dockerfile  build.sh
.devcontainer/: devcontainer.json
.doxygen/: Doxyfile
.github/workflows/: build_and_functional_tests.yml  codeql_checks.yml  misspellings_checks.yml  python_client_checks.yml  swap_ci_workflow.yml  unit_tests.yml
doc/: COMMANDS.md  SAMPLE_TX.md  TESTING.md  TRANSACTION.md
fuzzing/: CMakeLists.txt  README.md  fuzz_tx_parser.c  fuzz_tx_parser.cc  fuzz_txin_parser.c  fuzz_txin_parser.cc  fuzz_txout_parser.c  fuzz_txout_parser.cc
fuzzing/extra/: TxParser.cmake
src/: address.c  address.h  app_main.c  constants.h  crypto.c  crypto.h  globals.h  io.c  io.h  main.c  offsets.h  personal_message.c  personal_message.h  sighash.c  sighash.h  sw.h  types.h
src/apdu/: dispatcher.c  dispatcher.h  parser.c  parser.h
src/common/: base58.c  base58.h  bip32.c  bip32.h  buffer.c  buffer.h  format.c  format.h  format_local.c  format_local.h  macros.h  read.c  read.h  varint.c  varint.h  write.c  write.h
src/handler/: debug.c  debug.h  get_app_name.c  get_app_name.h  get_public_key.c  get_public_key.h  get_version.c  get_version.h  sign_msg.c  sign_msg.h  sign_tx.c  sign_tx.h
src/helper/: send_reponse.c  send_response.h
src/import/: blake2-impl.h  blake2b.c  blake2b.h  cashaddr.c  cashaddr.h
src/swap/: handle_check_address.c  handle_get_printable_amount.c  handle_swap_sign_transaction.c
src/transaction/: deserialize.c  deserialize.h  serialize.c  serialize.h  tx_validate.c  tx_validate.h  types.h  utils.c  utils.h
src/ui/: bagl_display.c  display.h  menu.h  menu_bagl.c  menu_nbgl.c  nbgl_display_address.c  nbgl_display_message.c  nbgl_display_transaction.c
src/ui/action/: validate.c  validate.h
tests/: requirements.txt  test_appname_cmd.py  test_error_cmd.py  test_name_version.py  test_pubkey_cmd.py  test_sign_cmd.py  test_sign_personal_message_cmd.py  test_version_cmd.py  utils.py
tests/application_client/: boilerplate_command_sender.py  boilerplate_transaction.py  kaspa_command_sender.py  kaspa_message.py  kaspa_response_unpacker.py  kaspa_transaction.py
unit-tests/: CMakeLists.txt  gen_coverage.sh  test_address.c  test_apdu_parser.c  test_base58.c  test_bip32.c  test_buffer.c  test_format.c  test_personal_message.c  test_sighash.c  test_tx_parser.c  test_tx_utils.c  test_write.c
unit-tests/mock_includes/: ux.h
